# rscalc

./: .gitignore  Cargo.toml  README.md  rscalc.1
.github/workflows/: release.yml
src/: build.rs  main.rs
